<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/dashBoard"
                android:icon="@drawable/ic_dashboard_unselected"
                android:title="@string/text_dashboard" />
        <item
                android:id="@+id/latestTransaction"
                android:icon="@drawable/coin_unselected_1x"
                android:title="@string/latest_transaction" />
        <item
                android:id="@+id/receive"
                android:icon="@drawable/ic_receive_unselected"
                android:title="@string/text_receive" />
        <item
                android:id="@+id/send"
                android:icon="@drawable/ic_send_unselected"
                android:title="@string/send" />


        <item
                android:id="@+id/stacked"
                android:icon="@drawable/coin_unselected_1x"
                android:title="@string/hybrid_reward" />
        <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:iconTint="@color/whiteColor"
                android:title="@string/text_logout" />
    </group>

</menu>
